[gd_scene load_steps=9 format=3 uid="uid://dmyhplf3jsokm"]

[ext_resource type="Script" path="res://scenes/game_main.gd" id="1_3aori"]
[ext_resource type="PackedScene" uid="uid://bye553xtn1cos" path="res://board/game_board.tscn" id="2_r4auc"]
[ext_resource type="PackedScene" uid="uid://dka28gb7yodkv" path="res://sub_scenes/player_info.tscn" id="3_sesid"]
[ext_resource type="Texture2D" uid="uid://c3y0vihjkod10" path="res://assets/GUI.png" id="4_ydhjg"]
[ext_resource type="Theme" uid="uid://qfdcqsau4pfe" path="res://new_theme.tres" id="5_snakl"]

[sub_resource type="Animation" id="Animation_oypcf"]
resource_name = "open"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NinePatchRect:size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(5, 5), Vector2(5, 22), Vector2(148, 22), Vector2(148, 22)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NinePatchRect:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(231, 29), Vector2(231, 3), Vector2(17, 3), Vector2(17, 3), Vector2(17, -88)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("NinePatchRect2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/path = NodePath("..:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ugmb1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NinePatchRect:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(141, 22)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NinePatchRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(27, 3)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("NinePatchRect2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ux3fb"]
_data = {
"RESET": SubResource("Animation_ugmb1"),
"open": SubResource("Animation_oypcf")
}

[node name="GameMain" type="Node2D"]
script = ExtResource("1_3aori")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(360, 640)
metadata/_edit_lock_ = true

[node name="GameBoard" parent="." instance=ExtResource("2_r4auc")]
position = Vector2(11, 268)

[node name="PlayerInfo01" parent="." instance=ExtResource("3_sesid")]
position = Vector2(0, 22)

[node name="PlayerInfo02" parent="." instance=ExtResource("3_sesid")]
position = Vector2(0, 1107)

[node name="Timer" type="Timer" parent="."]

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(640, 800)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 719.0
offset_bottom = 1283.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="GameOver" type="Control" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -233.0
offset_top = -33.0
offset_right = 233.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOver" type="AnimationPlayer" parent="Control/GameOver"]
libraries = {
"": SubResource("AnimationLibrary_ux3fb")
}

[node name="NinePatchRect" type="NinePatchRect" parent="Control/GameOver"]
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.0
offset_top = -30.0
offset_right = -65.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
texture = ExtResource("4_ydhjg")
region_rect = Rect2(50, 98, 28, 28)
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 2
patch_margin_bottom = 2

[node name="Label" type="Label" parent="Control/GameOver/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.3333
offset_top = -7.66666
offset_right = 169.667
offset_bottom = 20.3333
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 20
text = "xxx님이 승리하셨습니다."

[node name="NinePatchRect2" type="NinePatchRect" parent="Control/GameOver"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 112.0
offset_top = 63.0
offset_right = 188.0
offset_bottom = 103.0
scale = Vector2(3, 3)
texture = ExtResource("4_ydhjg")
region_rect = Rect2(2, 34, 44, 44)
patch_margin_left = 17
patch_margin_top = 17
patch_margin_right = 15
patch_margin_bottom = 17
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control/GameOver/NinePatchRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 7.0
offset_right = 42.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)

[node name="Button" type="Button" parent="Control/GameOver/NinePatchRect2/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
theme = ExtResource("5_snakl")
theme_override_font_sizes/font_size = 11
text = "다시하기"

[node name="Button2" type="Button" parent="Control/GameOver/NinePatchRect2/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
theme = ExtResource("5_snakl")
theme_override_font_sizes/font_size = 11
text = "메인으로"

[node name="MainMenu" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Control/MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -576.0
offset_bottom = -1028.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
texture = ExtResource("4_ydhjg")
region_rect = Rect2(0, 96, 48, 32)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="NinePatchRect" type="NinePatchRect" parent="Control/MainMenu/NinePatchRect"]
layout_mode = 0
offset_left = 10.0
offset_top = 12.0
offset_right = 132.0
offset_bottom = 72.0
texture = ExtResource("4_ydhjg")
region_rect = Rect2(82, 98, 29, 29)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="NinePatchRect2" type="NinePatchRect" parent="Control/MainMenu/NinePatchRect"]
layout_mode = 0
offset_left = 16.0
offset_top = 94.0
offset_right = 126.0
offset_bottom = 220.0
texture = ExtResource("4_ydhjg")
region_rect = Rect2(2, 34, 44, 44)
patch_margin_left = 15
patch_margin_top = 16
patch_margin_right = 14
patch_margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MainMenu/NinePatchRect/NinePatchRect2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -38.0
offset_top = 9.4
offset_right = 38.0
offset_bottom = 33.4
grow_horizontal = 2

[node name="WITHFRIEND" type="Button" parent="Control/MainMenu/NinePatchRect/NinePatchRect2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_snakl")
theme_override_font_sizes/font_size = 11
text = "WITHFRIEND"

[node name="AIBATTLE" type="Button" parent="Control/MainMenu/NinePatchRect/NinePatchRect2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_snakl")
theme_override_font_sizes/font_size = 11
text = "AIBATTLE"

[node name="OPTION" type="Button" parent="Control/MainMenu/NinePatchRect/NinePatchRect2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_snakl")
theme_override_font_sizes/font_size = 11
text = "OPTION"

[connection signal="BoardPieceClick" from="GameBoard" to="." method="_on_game_board_board_piece_click"]
[connection signal="PlayerNextTurn" from="GameBoard" to="." method="_on_game_board_player_next_turn"]
[connection signal="PlayerWin" from="GameBoard" to="." method="_on_game_board_player_win"]
[connection signal="SetRall" from="PlayerInfo01" to="." method="_on_player_info_set_rall"]
[connection signal="SetRall" from="PlayerInfo02" to="." method="_on_player_info_set_rall"]
